# cmx-rdma

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMX_RDMA_SRD.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yaml  nightly-bench.yaml  nightly-rdma.yaml
benchmarks/scripts/: analyze_results.py  load_test.py  pressure_test.py  profile.sh  run_benchmark.py
benchmarks/workloads/: README
crates/cmx-agent/: Cargo.toml
crates/cmx-agent/benches/: grpc_bench.rs
crates/cmx-agent/src/: config.rs  grpc.rs  lib.rs  main.rs  metadata.rs  metrics.rs  placement.rs  pressure.rs  remote_index.rs  state.rs
crates/cmx-block-store/: Cargo.toml
crates/cmx-block-store/benches/: block_store_bench.rs
crates/cmx-block-store/src/: allocator.rs  block.rs  eviction.rs  index.rs  lib.rs
crates/cmx-memory/: Cargo.toml
crates/cmx-memory/benches/: memory_pool_bench.rs
crates/cmx-memory/src/: gpu.rs  lib.rs  numa.rs  pool.rs
crates/cmx-proto/: Cargo.toml  build.rs
crates/cmx-proto/proto/: cmx.proto
crates/cmx-proto/src/: lib.rs
crates/cmx-transport/: Cargo.toml
crates/cmx-transport/src/: lib.rs  mock.rs  nixl.rs  pool.rs  traits.rs
deploy/: Dockerfile.agent  docker-compose.yaml
deploy/config/: cmx-agent.toml
deploy/grafana/: dashboard.json
deploy/k8s/: daemonset.yaml
deploy/slurm/: cmx-agent.service  launch_agents.sh
python/cmx-client/: pyproject.toml
python/cmx-client/src/cmx_client/: __init__.py  async_client.py  client.py  hashing.py
python/cmx-lmcache/: pyproject.toml
python/cmx-lmcache/src/cmx_lmcache/: __init__.py  connector.py
python/cmx-sglang/: pyproject.toml
python/cmx-sglang/src/cmx_sglang/: __init__.py  backend.py
python/cmx-vllm/: pyproject.toml
python/cmx-vllm/src/cmx_vllm/: __init__.py  connector.py
tests/: conftest.py  test_cache_hit.py  test_cache_miss.py  test_eviction.py  test_hashing.py  test_multi_node.py  test_sglang_backend.py  test_vllm_connector.py
