[package]
name = "cmx-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
profiling = ["tracing-flame"]

[dependencies]
cmx-proto = { workspace = true }
cmx-memory = { workspace = true }
cmx-block-store = { workspace = true }
cmx-transport = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
etcd-client = { workspace = true }
dashmap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tracing-flame = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[[bench]]
name = "grpc_bench"
harness = false
