[package]
name = "cmx-block-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmx-memory = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
