[package]
name = "cmx-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }

[features]
numa = []
gpu = []

[dev-dependencies]
proptest = { workspace = true }
