[package]
name = "cmx-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }

[features]
numa = []
gpu = []

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "memory_pool_bench"
harness = false
