[project]
name = "cmx-vllm"
version = "0.1.0"
description = "Direct vLLM KV connector for cmx-rdma — no LMCache dependency required"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "cmx-client>=0.1.0",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmx_vllm"]
